# lorair

./: .en-custom.txt  .gitignore  .pyspelling.yml  .spellcheck.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  platformio.ini  pyproject.toml
.github/: CODEOWNERS
docs/: index.md
search/: search_index.json
src/: bme.cpp  main.cpp
